<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".view.MainActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<android.support.constraint.ConstraintLayout
			android:id="@+id/root"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/etTitle"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:ems="10"
				android:hint="@string/notification_title"
				android:inputType="textShortMessage"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<EditText
				android:id="@+id/etBody"
				android:layout_width="0dp"
				android:layout_height="120dp"
				android:layout_marginEnd="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:ems="10"
				android:gravity="top"
				android:hint="@string/notification_body"
				android:inputType="textMultiLine"
				android:lines="5"
				android:maxLines="5"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/etTitle" />

			<ImageButton
				android:id="@+id/ibPlaceholderText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@android:color/transparent"
				android:src="@drawable/ic_placeholder_text"
				android:contentDescription="@string/generate_placeholder_text_title"
				app:layout_constraintEnd_toEndOf="@+id/etBody"
				app:layout_constraintTop_toTopOf="@+id/etBody" />

			<ImageButton
				android:id="@+id/ibClear"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:contentDescription="@string/clear_notification_text_fields_title"
				android:background="@android:color/transparent"
				android:src="@drawable/ic_delete"
				app:layout_constraintEnd_toEndOf="@+id/etBody"
				app:layout_constraintTop_toBottomOf="@+id/ibPlaceholderText" />

			<RadioGroup
				android:id="@+id/rgImages"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:checkedButton="@+id/rbGlide"
				android:orientation="horizontal"
				android:weightSum="2"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/etBody">

				<RadioButton
					android:id="@+id/rbGlide"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/glide" />

				<RadioButton
					android:id="@+id/rbPicasso"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/picasso" />

			</RadioGroup>

			<CheckBox
				android:id="@+id/cbActions"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:text="@string/include_action_buttons"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/rgImages" />

			<fragment
				android:id="@+id/frPlaces"
				android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/cbActions" />

			<EditText
				android:id="@+id/etAddress"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:ems="10"
				android:hint="@string/address"
				android:inputType="textPostalAddress"
				android:visibility="invisible"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/cbActions" />

			<RadioGroup
				android:id="@+id/rgSearchLocation"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:checkedButton="@+id/rbPlaces"
				android:orientation="horizontal"
				android:weightSum="3"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/frPlaces">

				<RadioButton
					android:id="@+id/rbNone"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/none" />

				<RadioButton
					android:id="@+id/rbAddress"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/address" />

				<RadioButton
					android:id="@+id/rbPlaces"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/places" />

			</RadioGroup>

			<Button
				android:id="@+id/btCreatePush"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:text="@string/create_push_notification"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/rgSearchLocation" />

		</android.support.constraint.ConstraintLayout>
	</ScrollView>

</android.support.constraint.ConstraintLayout>
